; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx6_usbphy.c_usbphy_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx6_usbphy.c_usbphy_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbphy_softc = type { i32* }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @usbphy_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbphy_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usbphy_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.usbphy_softc* @device_get_softc(i32 %4)
  store %struct.usbphy_softc* %5, %struct.usbphy_softc** %3, align 8
  %6 = load %struct.usbphy_softc*, %struct.usbphy_softc** %3, align 8
  %7 = getelementptr inbounds %struct.usbphy_softc, %struct.usbphy_softc* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @SYS_RES_MEMORY, align 4
  %13 = load %struct.usbphy_softc*, %struct.usbphy_softc** %3, align 8
  %14 = getelementptr inbounds %struct.usbphy_softc, %struct.usbphy_softc* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @bus_release_resource(i32 %11, i32 %12, i32 0, i32* %15)
  br label %17

17:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local %struct.usbphy_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
